--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ executables {
             lib libraries.view.shared
             lib libraries.comp.shared
             lib libraries.fread
+            lib libraries.lexer
+            cppCompiler.args "-std=c++11"
         }
     }
 }
