--- a/src/PL0-Comp/CMakeLists.txt
+++ b/src/PL0-Comp/CMakeLists.txt
@@ -3,21 +3,23 @@ project (PL0-Compiler)
 
 set (COMP_SRC
 	Comp/PL0toCL0/CompPL0.hh
-	Comp/PL0toCL0/Tokenizer.hh
-	Comp/PL0toCL0/Token.hh
-	Comp/PL0toCL0/Generator.hh
-	Comp/PL0toCL0/ILGen.hh
-	Comp/PL0toCL0/Graph.hh
-	Comp/PL0toCL0/Trans.hh
-	Comp/PL0toCL0/Symbols.hh
 	Comp/PL0toCL0/CompPL0.cc
+	Comp/PL0toCL0/Tokenizer.hh
 	Comp/PL0toCL0/Tokenizer.cc
+	Comp/PL0toCL0/Token.hh
 	Comp/PL0toCL0/Token.cc
+	Comp/PL0toCL0/Generator.hh
 	Comp/PL0toCL0/Generator.cc
+	Comp/PL0toCL0/ILGen.hh
 	Comp/PL0toCL0/ILGen.cc
+	Comp/PL0toCL0/Graph.hh
 	Comp/PL0toCL0/Graph.cc
+	Comp/PL0toCL0/Trans.hh
 	Comp/PL0toCL0/Trans.cc
-	Comp/PL0toCL0/Symbols.cc)
+	Comp/PL0toCL0/Symbols.hh
+	Comp/PL0toCL0/Symbols.cc
+	Comp/PL0toCL0/CompExcp.hh
+	Comp/PL0toCL0/CompExcp.cc)
 
 set (VIEW_SRC
 	View/CLI/ViewCLI.hh
