--- a/src/PL0-VM/CMakeLists.txt
+++ b/src/PL0-VM/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required (VERSION 3.5)
 project (PL0-VM)
 
 set (VM_SRC
-	vm.c
-	code.h
-	debug.h)
+    Code/vm.c
+    Code/code.h
+    Code/debug.h)
 
 add_executable (PL0-VM ${VM_SRC})
