--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,29 +1,12 @@
 cmake_minimum_required (VERSION 3.5)
 project (PL0-Compiler)
 
-file (GLOB COMP_SRC
-    src/comp/CompFactory.cpp
-    src/comp/pl0tocl0/*.hpp
-    src/comp/pl0tocl0/*.cpp)
+file (GLOB SRC app/Main.cpp
+    src/pl0compiler/logger/Logger.cpp
+    src/pl0compiler/logger/Logger.hpp
+    src/pl0compiler/fileio/FileIO.cpp
+    src/pl0compiler/fileio/FileIO.hpp
+    src/pl0compiler/compiler/*.cpp
+    src/pl0compiler/compiler/*.hpp)
 
-set (VIEW_SRC
-    src/view/ViewFactory.cpp
-    src/view/cli/ViewCLI.hpp
-    src/view/cli/ViewCLI.cpp)
-
-set (DATA_SRC
-    src/data/DataFactory.cpp
-    src/data/file/DataFile.hpp
-    src/data/file/DataFile.cpp)
-
-set (MAIN_SRC
-    app/Main.cpp
-    src/comp/CompFactory.hpp
-    src/view/ViewFactory.hpp
-    src/data/DataFactory.hpp)
-
-add_library (Comp SHARED ${COMP_SRC})
-add_library (View SHARED ${VIEW_SRC})
-add_library (Data SHARED ${DATA_SRC})
-add_executable (${PROJECT_NAME} ${MAIN_SRC})
-target_link_libraries (${PROJECT_NAME} Comp View Data)
+add_executable (${PROJECT_NAME} ${SRC})
